@@ -635,120 +635,38 @@ class webGUI(BaseHTTPRequestHandler):
           end = int(r.group(1))
           break
 
-
-        # passed a kill signal?
-        if decryptkeyvalue == '/kill':
-
-            self.send_response(200)
-            self.end_headers()
-            if (self.server.username is not None and self.server.username != ''):
-                self.wfile.write('<html><form action="/kill" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Stop Server"></form></html>')
-            else:
-                self.wfile.write('<html><form action="/kill" method="post"><input type="submit" value="Stop Server"></form></html>')
-
-            #self.server.ready = False
-            return
-
         # Plex name to hash
-        elif  re.search(r'/TEST\?file\=', str(decryptkeyvalue)):
+        if re.search(r'/TEST\?file\=', str(decryptkeyvalue)):
 
-            results = re.search(r'/TEST\?file\=([^\&]+)(\&?.*?)$', str(decryptkeyvalue))
-            xbmc.log("TEST = " +str(decryptkeyvalue))
+                results = re.search(r'/TEST\?file\=([^\&]+)(\&?.*?)$', str(decryptkeyvalue))
+                xbmc.log("TEST = " +str(decryptkeyvalue))
 
-            if results:
-                filename = str(results.group(1))
-                parameters = str(results.group(2))
-                filename = filename.replace("%20",' ')
+                if results:
+                    filename = str(results.group(1))
+                    parameters = str(results.group(2))
+                    filename = filename.replace("%20",' ')
 
-                xbmc.log("filename = " +str(self.server.namesList[filename]))
-                hash = self.server.namesList[filename]
-                filenames = self.server.MD5List[hash]
+                    xbmc.log("filename = " +str(self.server.namesList[filename]))
+                    hash = self.server.namesList[filename]
+                    filenames = self.server.MD5List[hash]
 
-                query = 'mode=video&instance=gdrive1&filename='+str(filenames[0])+'&title=' + str(filename) + str(parameters)
-                #self.send_response(307)
-                #self.send_header('Location', 'http://127.0.0.1:9988/default.py?' + query)
-                #self.end_headers()
-                quality = str(self.cookieQuality(headers))
-                if quality != '':
-                    query = query + quality
-                    self.override = True
+                    query = 'mode=video&instance=gdrive1&filename='+str(filenames[0])+'&title=' + str(filename) + str(parameters)
+                    #self.send_response(307)
+                    #self.send_header('Location', 'http://127.0.0.1:9988/default.py?' + query)
+                    #self.end_headers()
+                    quality = str(self.cookieQuality(headers))
+                    if quality != '':
+                        query = query + quality
+                        self.override = True
 
-                if '&override=true' in query:
-                    self.override = True
-
-
-                #xbmc.log("query = " +str(query))
-                mediaEngine = engine.contentengine()
-                mediaEngine.run(self,query, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
-                return
-        # force refresh of scheduler
-        elif  re.search(r'/default.py\?mode\=scheduler', str(decryptkeyvalue)):
-
-            self.server.addon = constants.addon
-            self.server.addon.__init__()
-            self.server.setDBM()
-
-            results = re.search(r'\?(.*)$', str(decryptkeyvalue))
-            if results:
-                query = str(results.group(1))
-
-            mediaEngine = engine.contentengine()
-            mediaEngine.run(self,query, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
-            return
+                    if '&override=true' in query:
+                        self.override = True
 
 
-        # enroll read/write token
-        elif  re.search(r'/default.py\?mode\=enroll_rw', str(decryptkeyvalue)):
-
-            self.send_response(200)
-            self.end_headers()
-
-            #pull client secrets
-
-            self.wfile.write('<html><body>Two steps away.<br/><br/>  1) Visit this site and then paste the application code in the below form: <a href="https://accounts.google.com/o/oauth2/auth?scope=https://www.googleapis.com/auth/drive&redirect_uri=urn:ietf:wg:oauth:2.0:oob&response_type=code&client_id=772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com" target="new">Google Authentication</a><br /><br />2) Return back to this tab and provide a nickname and the application code provided in step 1. <form action="default.py?mode=enroll" method="post">Nickname for account:<br /><input type="text" name="account"><br />Code (copy and paste from step 1):<br /><input type="text" name="code"><br /><form action="default.py?mode=enroll" method="post">Client ID:<br /><input type="hidden" name="client_id" value="772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com"><br />Client Secret:<br /><input type="hidden" name="client_secret" value="PgteSoD4uagqHA1_nLERLDx9"><br /><br /></br /> <input type="submit" value="Submit"></form></body></html>')
-            return
-
-
-        # redirect url to output
-        elif  re.search(r'/default.py\?mode\=enroll\&default\=true', str(decryptkeyvalue)):# or  re.search(r'/default.py\?mode\=enroll', str(decryptkeyvalue)):
-
-            self.send_response(200)
-            self.end_headers()
-
-            self.wfile.write('<html><body>Two steps away.<br/><br/>  1) Visit this site and then paste the application code in the below form: <a href="https://accounts.google.com/o/oauth2/auth?scope=https://www.googleapis.com/auth/drive&redirect_uri=urn:ietf:wg:oauth:2.0:oob&response_type=code&client_id=772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com" target="new">Google Authentication</a><br /><br />2) Return back to this tab and provide a nickname and the application code provided in step 1. <form action="default.py?mode=enroll" method="post">Nickname for account:<br /><input type="text" name="account"><br />Code (copy and paste from step 1):<br /><input type="text" name="code"><br /><form action="default.py?mode=enroll" method="post">Client ID:<br /><input type="hidden" name="client_id" value="772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com"><br />Client Secret:<br /><input type="hidden" name="client_secret" value="PgteSoD4uagqHA1_nLERLDx9"><br /><br /></br /> <input type="submit" value="Submit"></form></body></html>')
-            return
-
-        # redirect url to output
-        elif  re.search(r'/default.py\?mode\=enroll', str(decryptkeyvalue)):
-
-            self.send_response(200)
-            self.end_headers()
-
-            self.wfile.write('<html><body>Do you want to use a default client id / client secret or your own client id / client secret?  If you don\'t know what this means, select DEFAULT.<br /> <a href="default.py?mode=enroll&default=true">use default client id / client secret (DEFAULT)</a> <br /><br />OR use your own client id / client secret<br /><br /><form action="default.py?mode=enroll&default=false" method="post">Client ID:<br /><input type="text" name="client_id" value=""><br />Client Secret:<br /><input type="text" name="client_secret" value=""> <br/><input type="submit" value="Submit"></form></body></html>')
-            return
-
-        elif  re.search(r'/default.py\?mode\=enroll\&default\=false', str(decryptkeyvalue)):
-
-            self.send_response(200)
-            self.end_headers()
-
-            self.wfile.write('<html><body>Two steps away.<br/><br/>  1) Visit this site and then paste the application code in the below form: <a href="https://accounts.google.com/o/oauth2/auth?scope=https://www.googleapis.com/auth/drive&redirect_uri=urn:ietf:wg:oauth:2.0:oob&response_type=code&client_id=772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com" target="new">Google Authentication</a><br /><br />2) Return back to this tab and provide a nickname and the application code provided in step 1. <form action="default.py?mode=enroll" method="post">Nickname for account:<br /><input type="text" name="account"><br />Code (copy and paste from step 1):<br /><input type="text" name="code"><br /><br /> <input type="submit" value="Submit"></form></body></html>')
-            return
-
-
-        elif  re.search(r'/settings', str(decryptkeyvalue)):
-            self.send_response(200)
-            self.end_headers()
-            if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
-                self.wfile.write('<html><form action="/settings" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
-            else:
-                self.displaySettings(host=host)
-
-            #self.server.ready = False
-            return
-
-
-
+                    #xbmc.log("query = " +str(query))
+                    mediaEngine = engine.contentengine()
+                    mediaEngine.run(self,query, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
+                    return
         elif  re.search(r'/quality=SD', str(decryptkeyvalue)):
             self.send_response(200)
             self.send_header('Set-Cookie', 'quality=2')
@@ -780,49 +698,7 @@ class webGUI(BaseHTTPRequestHandler):
             with open('./resources/videos/blank.mp4', 'rb') as f:
                 self.wfile.write(f.read())
             return
-
-        elif decryptkeyvalue == '/list' or decryptkeyvalue == '/':
-
-            if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
-                self.send_response(200)
-                self.end_headers()
-                self.wfile.write('<html><form action="/list" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
-            else:
-                mediaEngine = engine.contentengine()
-                mediaEngine.run(self, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
-
-            #self.server.ready = False
-            return
-
-        elif decryptkeyvalue == '/reload':
-            self.server.addon = constants.addon
-            self.server.addon.__init__()
-            self.server.setDBM()
-            self.send_response(200)
-            self.end_headers()
-            if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
-                self.wfile.write('<html><form action="/list" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
-            else:
-                self.wfile.write('<html><form action="/list" method="post"><input type="submit" value="Login"></form></html>')
-
-            #self.server.ready = False
-            return
-
-        elif decryptkeyvalue == '/reloadhash':
-
-            self.send_response(200)
-            self.end_headers()
-            self.server.loadHash(True)
-            if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
-                self.wfile.write('<html><form action="/list" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
-            else:
-                self.wfile.write('<html><form action="/list" method="post"><input type="submit" value="Login"></form></html>')
-
-            return
-
-
-
-        # redirect url to output
+            # redirect url to output
         elif re.search(r'/play', str(decryptkeyvalue)):
 #            self.send_response(200)
 #            self.end_headers()
@@ -1325,8 +1201,12 @@ class webGUI(BaseHTTPRequestHandler):
             #response_data = response.read()
             response.close()
             return
-        # redirect url to output
-        elif re.search(r'/\?', str(decryptkeyvalue)) or re.search(r'/default.py', str(decryptkeyvalue)):
+
+        # ** unauthenticated playback (don't require authentication)
+        # mode=video and no other mode=
+        # OR
+        # mode=index and folder!=root
+        elif ( (re.search(r'mode=video', str(decryptkeyvalue),re.IGNORECASE) and not re.search(r'mode=^[video]', str(decryptkeyvalue),re.IGNORECASE) ) or (re.search(r'mode=index', str(decryptkeyvalue),re.IGNORECASE) and not re.search(r'folder=root', str(decryptkeyvalue),re.IGNORECASE) )) :# and not re.search(r'folder=root', str(decryptkeyvalue),re.IGNORECASE))) :#or (re.search(r'mode=index', str(decryptkeyvalue),re.IGNORECASE) and not re.search(r'folder=root', str(decryptkeyvalue),re.IGNORECASE)  )) :
 #            self.send_response(200)
 #            self.end_headers()
 
@@ -1348,12 +1228,165 @@ class webGUI(BaseHTTPRequestHandler):
             mediaEngine.run(self,query, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
             return
 
+        #require authentication for all further requests
+        elif not isLoggedIn and (self.server.username is not None and self.server.username != ''):
+            self.send_response(200)
+            self.end_headers()
 
-
-        # redirect url to output
-        else:
-            # no options
+            self.wfile.write('<html><form action="/list" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
             return
+        else:
+
+            # passed a kill signal?
+            if decryptkeyvalue == '/kill':
+
+                self.send_response(200)
+                self.end_headers()
+                if (self.server.username is not None and self.server.username != ''):
+                    self.wfile.write('<html><form action="/kill" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Stop Server"></form></html>')
+                else:
+                    self.wfile.write('<html><form action="/kill" method="post"><input type="submit" value="Stop Server"></form></html>')
+
+                #self.server.ready = False
+                return
+
+
+            # force refresh of scheduler
+            elif  re.search(r'/default.py\?mode\=scheduler', str(decryptkeyvalue)):
+
+                self.server.addon = constants.addon
+                self.server.addon.__init__()
+                self.server.setDBM()
+
+                results = re.search(r'\?(.*)$', str(decryptkeyvalue))
+                if results:
+                    query = str(results.group(1))
+
+                mediaEngine = engine.contentengine()
+                mediaEngine.run(self,query, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
+                return
+
+
+            # enroll read/write token
+            elif  re.search(r'/default.py\?mode\=enroll_rw', str(decryptkeyvalue)):
+
+                self.send_response(200)
+                self.end_headers()
+
+                #pull client secrets
+
+                self.wfile.write('<html><body>Two steps away.<br/><br/>  1) Visit this site and then paste the application code in the below form: <a href="https://accounts.google.com/o/oauth2/auth?scope=https://www.googleapis.com/auth/drive&redirect_uri=urn:ietf:wg:oauth:2.0:oob&response_type=code&client_id=772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com" target="new">Google Authentication</a><br /><br />2) Return back to this tab and provide a nickname and the application code provided in step 1. <form action="default.py?mode=enroll" method="post">Nickname for account:<br /><input type="text" name="account"><br />Code (copy and paste from step 1):<br /><input type="text" name="code"><br /><form action="default.py?mode=enroll" method="post">Client ID:<br /><input type="hidden" name="client_id" value="772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com"><br />Client Secret:<br /><input type="hidden" name="client_secret" value="PgteSoD4uagqHA1_nLERLDx9"><br /><br /></br /> <input type="submit" value="Submit"></form></body></html>')
+                return
+
+
+            # redirect url to output
+            elif  re.search(r'/default.py\?mode\=enroll\&default\=true', str(decryptkeyvalue)):# or  re.search(r'/default.py\?mode\=enroll', str(decryptkeyvalue)):
+
+                self.send_response(200)
+                self.end_headers()
+
+                self.wfile.write('<html><body>Two steps away.<br/><br/>  1) Visit this site and then paste the application code in the below form: <a href="https://accounts.google.com/o/oauth2/auth?scope=https://www.googleapis.com/auth/drive&redirect_uri=urn:ietf:wg:oauth:2.0:oob&response_type=code&client_id=772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com" target="new">Google Authentication</a><br /><br />2) Return back to this tab and provide a nickname and the application code provided in step 1. <form action="default.py?mode=enroll" method="post">Nickname for account:<br /><input type="text" name="account"><br />Code (copy and paste from step 1):<br /><input type="text" name="code"><br /><form action="default.py?mode=enroll" method="post">Client ID:<br /><input type="hidden" name="client_id" value="772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com"><br />Client Secret:<br /><input type="hidden" name="client_secret" value="PgteSoD4uagqHA1_nLERLDx9"><br /><br /></br /> <input type="submit" value="Submit"></form></body></html>')
+                return
+
+            # redirect url to output
+            elif  re.search(r'/default.py\?mode\=enroll', str(decryptkeyvalue)):
+
+                self.send_response(200)
+                self.end_headers()
+
+                self.wfile.write('<html><body>Do you want to use a default client id / client secret or your own client id / client secret?  If you don\'t know what this means, select DEFAULT.<br /> <a href="default.py?mode=enroll&default=true">use default client id / client secret (DEFAULT)</a> <br /><br />OR use your own client id / client secret<br /><br /><form action="default.py?mode=enroll&default=false" method="post">Client ID:<br /><input type="text" name="client_id" value=""><br />Client Secret:<br /><input type="text" name="client_secret" value=""> <br/><input type="submit" value="Submit"></form></body></html>')
+                return
+
+            elif  re.search(r'/default.py\?mode\=enroll\&default\=false', str(decryptkeyvalue)):
+
+                self.send_response(200)
+                self.end_headers()
+
+                self.wfile.write('<html><body>Two steps away.<br/><br/>  1) Visit this site and then paste the application code in the below form: <a href="https://accounts.google.com/o/oauth2/auth?scope=https://www.googleapis.com/auth/drive&redirect_uri=urn:ietf:wg:oauth:2.0:oob&response_type=code&client_id=772521706521-bi11ru1d9h40h1lipvbmp3oddtcgro14.apps.googleusercontent.com" target="new">Google Authentication</a><br /><br />2) Return back to this tab and provide a nickname and the application code provided in step 1. <form action="default.py?mode=enroll" method="post">Nickname for account:<br /><input type="text" name="account"><br />Code (copy and paste from step 1):<br /><input type="text" name="code"><br /><br /> <input type="submit" value="Submit"></form></body></html>')
+                return
+
+
+            elif  re.search(r'/settings', str(decryptkeyvalue)):
+                self.send_response(200)
+                self.end_headers()
+                if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
+                    self.wfile.write('<html><form action="/settings" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
+                else:
+                    self.displaySettings(host=host)
+
+                #self.server.ready = False
+                return
+
+
+
+
+            elif decryptkeyvalue == '/list' or decryptkeyvalue == '/':
+
+                if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
+                    self.send_response(200)
+                    self.end_headers()
+                    self.wfile.write('<html><form action="/list" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
+                else:
+                    mediaEngine = engine.contentengine()
+                    mediaEngine.run(self, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
+
+                #self.server.ready = False
+                return
+
+            elif decryptkeyvalue == '/reload':
+                self.server.addon = constants.addon
+                self.server.addon.__init__()
+                self.server.setDBM()
+                self.send_response(200)
+                self.end_headers()
+                if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
+                    self.wfile.write('<html><form action="/list" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
+                else:
+                    self.wfile.write('<html><form action="/list" method="post"><input type="submit" value="Login"></form></html>')
+
+                #self.server.ready = False
+                return
+
+            elif decryptkeyvalue == '/reloadhash':
+
+                self.send_response(200)
+                self.end_headers()
+                self.server.loadHash(True)
+                if not isLoggedIn and (self.server.username is not None and self.server.username != ''):
+                    self.wfile.write('<html><form action="/list" method="post">Username: <input type="text" name="username"><br />Password: <input type="password" name="password"><br /><input type="submit" value="Login"></form></html>')
+                else:
+                    self.wfile.write('<html><form action="/list" method="post"><input type="submit" value="Login"></form></html>')
+
+                return
+
+
+
+
+            # redirect url to output
+            elif re.search(r'/\?', str(decryptkeyvalue)) or re.search(r'/default.py', str(decryptkeyvalue)):
+    #            self.send_response(200)
+    #            self.end_headers()
+
+                results = re.search(r'\?(.*)$', str(decryptkeyvalue))
+                if results:
+                    query = str(results.group(1))
+                    xbmc.log("query = " +str(query))
+
+                quality = str(self.cookieQuality(headers))
+                if quality != '':
+                    query = query + quality
+                    self.override = True
+
+                if '&override=true' in query:
+                    self.override = True
+
+
+                mediaEngine = engine.contentengine()
+                mediaEngine.run(self,query, DBM=self.server.dbm, addon=self.server.addon, host=host, MD5List=self.server.MD5List, fileIDList=self.server.fileIDList)
+                return
+
+
+
 
 
     def displaySettings(self, host=''):
