@@ -1,3 +1,4 @@
+- security fixes -- ensure only allow PLAY, MODE=VIDEO or MODE=INDEX when folder!=root allow unauthenticated access
 v0.1.30 (2019-01-07)
 - fix a building STRM issue when filename contains #
 - add a new hash file method
